--- a/src/main/resources/templates/items/createItemForm.html
+++ b/src/main/resources/templates/items/createItemForm.html
@@ -15,8 +15,7 @@
         </div>
         <div class="form-group">
             <label th:for="stockQuantity">수량</label>
-            <input type="number" th:field="*{stockQuantity}" class="form-
-control" placeholder="수량을 입력하세요"> </div>
+            <input type="number" th:field="*{stockQuantity}" class="form-control" placeholder="수량을 입력하세요"> </div>
         <div class="form-group">
             <label th:for="author">저자</label>
             <input type="text" th:field="*{author}" class="form-control"
