--- a/src/main/resources/templates/order/orderForm.html
+++ b/src/main/resources/templates/order/orderForm.html
@@ -17,7 +17,8 @@
             <label for="item">상품명</label>
             <select name="itemId" id="item" class="form-control"> <option value="">상품선택</option>
                 <option th:each="item : ${items}"
-                        th:value="${item.id}"></option>
+                        th:value="${item.id}"
+                        th:text="${item.name}"></option>
             </select>
         </div>
         <div class="form-group">
